# refine-test

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini
docs/: smoke-test.md
refine_tests/: __init__.py  runner.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_app_lifecycle.py  test_chat.py  test_features.py  test_gap_lifecycle.py  test_gap_management.py  test_import.py  test_local_operation.py  test_nodes_cluster.py  test_processes.py  test_reporters.py  test_runtime_control.py  test_smoke_ai_provider.py  test_status_smoke.py  test_target_attach.py  test_team_distribution.py
tests/smoke_ai_provider_contract/: __init__.py  test_smoke_ai.py
tests/smoke_ai_provider_executable/: __main__.py  smoke-ai
tests/smoke_ai_provider_executable/templates/: chat.md  fallback.md  gap-agent.md  governance.md  import.jsonl  target-app.json
tests/support/: __init__.py  cli.py  cluster.py  env.py  infrastructure.py
tests/ui/: app_shell.spec.ts  application_lifecycle.spec.ts  gap_lifecycle.spec.ts  gap_management.spec.ts  global-setup.ts  global-teardown.ts  guided_setup.spec.ts  helpers.ts  navigation.spec.ts  review_quality.spec.ts  runtime_control.spec.ts  smoke_ai_provider.spec.ts  support.spec.ts  work_intake.spec.ts
