[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refine-test"
version = "0.1.0"
description = "Black-box integration smoke tests for Refine UI, CLI, and deterministic smoke-ai."
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0",
  "python-dotenv>=1.0",
  "requests>=2.31"
]

[project.scripts]
test = "refine_tests.runner:main"

[tool.setuptools.packages.find]
include = ["refine_tests*", "tests*"]
